update cases 43 and 40

--- a/casestudies/39/casestudy/www/layout/case_id_39_id_114_c_bio.html
+++ b/casestudies/39/casestudy/www/layout/case_id_39_id_114_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: John Harris | Risky Business: John Harris, Jim VandeHei, and Politico Part B: A Winning Model?
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: John Harris | Risky Business: John Harris, Jim VandeHei, and Politico Part B: A Winning Model?
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #c73104;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,142 +84,116 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/39/knightcase_logo_B.JPG') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_39.html" title="Home"><span>Biography: John Harris</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_39_id_454.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_39.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_39_id_431.html">Early Days</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_39_id_432.html">Gaining Ground</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_39_id_433.html">Banner Year</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_39_id_434.html">Election Looms</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/39/John&#32;Harris,&#32;Jim&#32;VandeHei&#32;and&#32;Politico&#32;Part&#32;B_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_39.html">Home</a></div>		
-		<h1 class="title">Biography: John&nbsp;Harris</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><p>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="ProgId" content="Word.Document">
-<meta name="Generator" content="Microsoft Word 11">
-<meta name="Originator" content="Microsoft Word 11">
-<link rel="File-List" href="file:///C:%5CDOCUME%7E1%5CKGILSI%7E1%5CLOCALS%7E1%5CTemp%5Cmsohtml1%5C01%5Cclip_filelist.xml" /><!--[if gte mso 9]><xml>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/39/knightcase_logo_B.JPG') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_39.html" title="Home">
+         <span>
+          Biography: John Harris
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_39_id_454.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_39.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_39_id_431.html">
+          Early Days
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_39_id_432.html">
+          Gaining Ground
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_39_id_433.html">
+          Banner Year
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_39_id_434.html">
+          Election Looms
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/39/John Harris, Jim VandeHei and Politico Part B_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_39.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: John Harris
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <p>
+         <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+          <meta content="Word.Document" name="ProgId">
+           <meta content="Microsoft Word 11" name="Generator">
+            <meta content="Microsoft Word 11" name="Originator">
+             <link href="file:///C:%5CDOCUME%7E1%5CKGILSI%7E1%5CLOCALS%7E1%5CTemp%5Cmsohtml1%5C01%5Cclip_filelist.xml" rel="File-List"/>
+             <!--[if gte mso 9]><xml>
  
   Normal
   0
@@ -227,12 +211,15 @@ font-style:italic;
   
   MicrosoftInternetExplorer4
  
-</xml><![endif]--><!--[if gte mso 9]><![endif]--><!--[if !mso]>
+</xml><![endif]-->
+             <!--[if gte mso 9]><![endif]-->
+             <!--[if !mso]>
 <style>
 st1\:*{behavior:url(#ieooui) }
 </style>
-<![endif]--><style type="text/css">
-<!--
+<![endif]-->
+             <style type="text/css">
+              <!--
  /* Font Definitions */
  @font-face
 	{"Palatino Linotype";
@@ -311,7 +298,8 @@ p.final-noindent, li.final-noindent, div.final-noindent
 div.Section1
 	{page:Section1;}
 -->
-</style><!--[if gte mso 10]>
+             </style>
+             <!--[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -319,76 +307,119 @@ div.Section1
 	mso-style-parent:"";
 	font-size:10.0pt;"Times New Roman";}
 </style>
-<![endif]-->                                         </meta>
-</meta>
-</meta>
-</meta>
-</p>
-<div style="padding: 10px; float: right;"><img src="../../files/photos/347/Harris-bio-pic.gif" alt="" />
-<p class="caption">&copy; Politico.</p>
-</div>
-<p>John Harris&rsquo; journalism career began at Carleton College in Minnesota, where he worked at the school newspaper. After graduating in 1985, he began an internship at the <i>Washington Post</i> that turned into a 21 year career there. Harris covered local politics, state politics in Virginia, and national politics. From 1995 to 2001, he covered the Clinton White House; he later wrote a book Clinton&rsquo;s presidency: <i>The Survivor: Bill Clinton in the White House</i>. He was also the co-author, with <i>Time</i>&rsquo;s Mark Halperin, of <i>The Way to Win: Taking the White House in 2008</i>.</p>
-<p>After a brief stint as national politics editor at the <i>Post</i>, Harris founded <i>Politico</i> with colleague Jim VandeHei in 2007. Harris and wife Ann O&rsquo;Hanlon lived in Alexandria, Virginia with their three children.</p>
-<p><i>Listen to Harris discuss his decision to become an editor.</i><br />
-<img border="0" alt="" src="../../files/audios/79/Harris&#32;bio.mp3" class="audiofile" /></p></div>
+<![endif]-->
+            </meta>
+           </meta>
+          </meta>
+         </meta>
+        </p>
+        <div style="padding: 10px; float: right;">
+         <img alt="" src="../../files/photos/347/Harris-bio-pic.gif"/>
+         <p class="caption">
+          © Politico.
+         </p>
+        </div>
+        <p>
+         John Harris’ journalism career began at Carleton College in Minnesota, where he worked at the school newspaper. After graduating in 1985, he began an internship at the
+         <i>
+          Washington Post
+         </i>
+         that turned into a 21 year career there. Harris covered local politics, state politics in Virginia, and national politics. From 1995 to 2001, he covered the Clinton White House; he later wrote a book Clinton’s presidency:
+         <i>
+          The Survivor: Bill Clinton in the White House
+         </i>
+         . He was also the co-author, with
+         <i>
+          Time
+         </i>
+         ’s Mark Halperin, of
+         <i>
+          The Way to Win: Taking the White House in 2008
+         </i>
+         .
+        </p>
+        <p>
+         After a brief stint as national politics editor at the
+         <i>
+          Post
+         </i>
+         , Harris founded
+         <i>
+          Politico
+         </i>
+         with colleague Jim VandeHei in 2007. Harris and wife Ann O’Hanlon lived in Alexandria, Virginia with their three children.
+        </p>
+        <p>
+         <i>
+          Listen to Harris discuss his decision to become an editor.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/79/Harris bio.mp3"/>-->
+        </p>
+       </div>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_39_id_113_c_bio.html">Jim&nbsp;VandeHei</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_39_id_114_c_bio.html">John&nbsp;Harris</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_39_id_113_c_bio.html">
+          Jim VandeHei
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_39_id_114_c_bio.html">
+          John Harris
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
