--- a/casestudies/40/casestudy/www/layout/case_id_40_id_117_c_bio.html
+++ b/casestudies/40/casestudy/www/layout/case_id_40_id_117_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Cornelia Grumman | Elusive Story: The Chicago Tribune Examines &quot;No Child Left Behind&quot;
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Cornelia Grumman | Elusive Story: The Chicago Tribune Examines "No Child Left Behind"
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #2947a3;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,155 +84,187 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/40/Website_banner.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_40.html" title="Home"><span>Biography: Cornelia Grumman</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_40.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/40/Chicago&#32;Tribune&#32;Examines&#32;No&#32;Child&#32;Left&#32;Behind_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_40.html">Home</a></div>		
-		<h1 class="title">Biography: Cornelia&nbsp;Grumman</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="padding: 10px; float: left;"><img src="../../files/photos/340/cbg&#32;pic.jpg" alt="" /></div>
-<p>Grumman has been a member of the <i>Chicago Tribune</i>'s editorial board since 2000, where she has written primarily about education, juvenile justice, social issues, state issues, and the death penalty. She won the 2003 Pulitzer Prize for editorials about how to reform Illinois' system of capital punishment. Prior to becoming a member of the editorial board, Grumman spent six years as a metropolitan, state government, and Internet reporter for the <i>Tribune</i>. She worked as a news and features reporter at the <i>News &amp; Observer</i> in Raleigh, North  Carolina, as a stringer for the<i> Washington Post</i> in Beijing, China in the aftermath of the student democracy movement in 1989, and as a reporter at the <i>Daily Southtown</i> in Chicago.</p>
-<p><i>Listen to Grumman describe how the story finally took a health toll on Banchero. </i><br />
-<img border="0" alt="" src="../../files/audios/77/High&#32;anxiety.mp3" class="audiofile" /></p></div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/40/Website_banner.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_40.html" title="Home">
+         <span>
+          Biography: Cornelia Grumman
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_40.html">
+          Title Page
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_40_id_115_c_bio.html">Stephanie&nbsp;Banchero</a></li>
-
-<li class="leaf"><a  href="case_id_40_id_116_c_bio.html">George&nbsp;Papajohn</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_40_id_117_c_bio.html">Cornelia&nbsp;Grumman</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/40/Chicago Tribune Examines No Child Left Behind_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_40.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Cornelia Grumman
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="padding: 10px; float: left;">
+         <img alt="" src="../../files/photos/340/cbg pic.jpg"/>
+        </div>
+        <p>
+         Grumman has been a member of the
+         <i>
+          Chicago Tribune
+         </i>
+         's editorial board since 2000, where she has written primarily about education, juvenile justice, social issues, state issues, and the death penalty. She won the 2003 Pulitzer Prize for editorials about how to reform Illinois' system of capital punishment. Prior to becoming a member of the editorial board, Grumman spent six years as a metropolitan, state government, and Internet reporter for the
+         <i>
+          Tribune
+         </i>
+         . She worked as a news and features reporter at the
+         <i>
+          News &amp; Observer
+         </i>
+         in Raleigh, North  Carolina, as a stringer for the
+         <i>
+          Washington Post
+         </i>
+         in Beijing, China in the aftermath of the student democracy movement in 1989, and as a reporter at the
+         <i>
+          Daily Southtown
+         </i>
+         in Chicago.
+        </p>
+        <p>
+         <i>
+          Listen to Grumman describe how the story finally took a health toll on Banchero.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/77/High anxiety.mp3"/>-->
+         <audio controls><source src="../../files/audios/77/High&#32;anxiety.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_40_id_115_c_bio.html">
+          Stephanie Banchero
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_40_id_116_c_bio.html">
+          George Papajohn
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_40_id_117_c_bio.html">
+          Cornelia Grumman
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
