--- a/casestudies/43/casestudy/www/layout/case_id_43_id_125_c_bio.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_125_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Alberto Ibargüen | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Alberto Ibargüen | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #bd3c00;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,289 +84,283 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/43/knightcase_logo.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_43.html" title="Home"><span>Biography: Alberto Ibargüen</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_43.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_466.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_467.html">The two <i>Herald</i>s&#8212;brief history</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_468.html">Castañeda era</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_469.html">Separate cultures</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_470.html">Corral's series</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_471.html">Timing?  Competition?</a>
-
-
-
-
-
-</li>
-
-
-<li class="collapsed"><a  href="case_id_43_id_472.html">Notification&#8212;Sept. 7</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_473.html">Story goes to press</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_474.html">Widespread reaction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_475.html"><i>Nuevo Herald</i> campaign</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_476.html">McClatchy meets Miami</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_477.html">Hiassen episode</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_478.html">The view from Sacramento</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_43_id_479.html">Visit to Miami</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/43/Miami&#32;Herald&#32;Nuevo&#32;Herald&#32;and&#32;Radio&#32;Marti_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_43.html">Home</a></div>		
-		<h1 class="title">Biography: Alberto&nbsp;Ibargüen</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="padding: 10px; float: right;"><img src="../../files/photos/377/ibarguen.jpg" alt="" /></div>
-<p>Alberto Ibarg&uuml;en became president and CEO of the John S. and James L. Knight Foundation in mid-2006. Before that, he was publisher of the <i>Miami Herald </i>and of <i>El Nuevo Herald</i>. During his tenure, TMH won three Pulitzer Prizes and ENH won Spain&rsquo;s Ortega y Gasset Prize for excellence in journalism.</p>
-<p>He studied at Wesleyan University and the University of Pennsylvania Law School. Between college and law school, he served in the Peace Corps in Venezuela&rsquo;s Amazon Territory and in Colombia. He practiced law in Hartford, Connecticut until he joined the Hartford <i>Courant</i>, then <i>Newsday</i> in New York before moving to Miami.</p>
-<p><span>For his work to protect journalists in Latin America as part of the Inter American Press Association, Ibarg&uuml;en received a Maria Moors Cabot citation from Columbia University and George Washington University awarded him an honorary Doctor of Letters.</span></p>
-<p><i>Listen to Ibarg&uuml;en about his background. </i><br />
-<img border="0" alt="" src="../../files/audios/104/Ibarguen&#32;bio.mp3" class="audiofile" /></p></div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/43/knightcase_logo.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_43.html" title="Home">
+         <span>
+          Biography: Alberto Ibargüen
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_43.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_466.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_467.html">
+          The two
+          <i>
+           Herald
+          </i>
+          s—brief history
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_468.html">
+          Castañeda era
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_469.html">
+          Separate cultures
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_470.html">
+          Corral's series
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_471.html">
+          Timing?  Competition?
+         </a>
+        </li>
+        <li class="collapsed">
+         <a href="case_id_43_id_472.html">
+          Notification—Sept. 7
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_473.html">
+          Story goes to press
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_474.html">
+          Widespread reaction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_475.html">
+          <i>
+           Nuevo Herald
+          </i>
+          campaign
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_476.html">
+          McClatchy meets Miami
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_477.html">
+          Hiassen episode
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_478.html">
+          The view from Sacramento
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_479.html">
+          Visit to Miami
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  class="active"  href="case_id_43_id_125_c_bio.html">Alberto&nbsp;Ibargüen</a></li>
-
-<li class="leaf"><a  href="case_id_43_id_126_c_bio.html">Humberto&nbsp;Castelló</a></li>
-
-<li class="leaf"><a  href="case_id_43_id_127_c_bio.html">Howard&nbsp;Weaver</a></li>
-
-<li class="leaf"><a  href="case_id_43_id_128_c_bio.html">Oscar&nbsp;Corral</a></li>
-
-<li class="leaf"><a  href="case_id_43_id_129_c_bio.html">Wilfredo&nbsp;Cancio Isla</a></li>
-
-<li class="leaf"><a  href="case_id_43_id_130_c_bio.html">Tom&nbsp;Fiedler</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/43/Miami Herald Nuevo Herald and Radio Marti_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_43.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Alberto Ibargüen
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="padding: 10px; float: right;">
+         <img alt="" src="../../files/photos/377/ibarguen.jpg"/>
+        </div>
+        <p>
+         Alberto Ibargüen became president and CEO of the John S. and James L. Knight Foundation in mid-2006. Before that, he was publisher of the
+         <i>
+          Miami Herald
+         </i>
+         and of
+         <i>
+          El Nuevo Herald
+         </i>
+         . During his tenure, TMH won three Pulitzer Prizes and ENH won Spain’s Ortega y Gasset Prize for excellence in journalism.
+        </p>
+        <p>
+         He studied at Wesleyan University and the University of Pennsylvania Law School. Between college and law school, he served in the Peace Corps in Venezuela’s Amazon Territory and in Colombia. He practiced law in Hartford, Connecticut until he joined the Hartford
+         <i>
+          Courant
+         </i>
+         , then
+         <i>
+          Newsday
+         </i>
+         in New York before moving to Miami.
+        </p>
+        <p>
+         <span>
+          For his work to protect journalists in Latin America as part of the Inter American Press Association, Ibargüen received a Maria Moors Cabot citation from Columbia University and George Washington University awarded him an honorary Doctor of Letters.
+         </span>
+        </p>
+        <p>
+         <i>
+          Listen to Ibargüen about his background.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/104/Ibarguen bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/104/Ibarguen&#32;bio.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a class="active" href="case_id_43_id_125_c_bio.html">
+          Alberto Ibargüen
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_126_c_bio.html">
+          Humberto Castelló
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_127_c_bio.html">
+          Howard Weaver
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_128_c_bio.html">
+          Oscar Corral
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_129_c_bio.html">
+          Wilfredo Cancio Isla
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_43_id_130_c_bio.html">
+          Tom Fiedler
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
