--- a/casestudies/38/casestudy/www/layout/case_id_38_id_111_c_bio.html
+++ b/casestudies/38/casestudy/www/layout/case_id_38_id_111_c_bio.html
@@ -377,6 +377,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/81/VandeHei on wife convincing him.mp3"/>-->
+         <audio controls><source src="../../files/audios/81/VandeHei&#32;on&#32;wife&#32;convincing&#32;him.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
