--- a/casestudies/38/casestudy/www/layout/case_id_38_id_112_c_bio.html
+++ b/casestudies/38/casestudy/www/layout/case_id_38_id_112_c_bio.html
@@ -379,6 +379,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/79/Harris bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/79/Harris&#32;bio.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
