--- a/casestudies/39/casestudy/www/layout/case_id_39_id_113_c_bio.html
+++ b/casestudies/39/casestudy/www/layout/case_id_39_id_113_c_bio.html
@@ -289,6 +289,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/83/VandeHei on wife convincing him.mp3"/>-->
+         <audio controls><source src="../../files/audios/83/VandeHei&#32;on&#32;wife&#32;convincing&#32;him.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
