--- a/casestudies/25/casestudy/www/layout/case_id_25_id_101_c_bio.html
+++ b/casestudies/25/casestudy/www/layout/case_id_25_id_101_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Leonard Downie, Jr. | Public Death, Private Life: Army Major Alan Rogers and the  Washington Post
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Leonard Downie, Jr. | Public Death, Private Life: Army Major Alan Rogers and the  Washington Post
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #0710b5;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,265 +84,256 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/25/knightcase_logo_rogers.JPG') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_25.html" title="Home"><span>Biography: Leonard Downie, Jr.</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_25_id_315.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_303.html">Gays in the Military</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_304.html">Gays and the Media</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_305.html">The Rise of "Outing"</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_306.html">A News Tip</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_307.html">The Arlington Ceremony</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_308.html">At the Inn</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_309.html">What did Rogers want?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_310.html">Who was Alan Rogers?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_311.html">What to Write</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_312.html">Deliberating</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_25_id_313.html">On Downie's Desk</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/25/Army&#32;Major&#32;Alan&#32;Rogers&#32;and&#32;the&#32;Washington&#32;Post_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_25.html">Home</a></div>		
-		<h1 class="title">Biography: Leonard&nbsp;Downie, Jr.</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="padding: 10px; float: left;"><img alt="" src="../../files/photos/268/Len&#32;Downie.jpg" /></div>
-<p class="MsoNormal">Leonard Downie, Jr. was the Executive Editor of the <i>Washington Post</i>. Downie has spent his entire journalistic career at the paper, where he started as a summer intern reporter in 1965. He soon became a prize-winning investigative reporter on the paper&rsquo;s Metro desk. In 1974, when he was Assistant Managing Editor for Metropolitan News, Downie oversaw the paper&rsquo;s Watergate coverage. Downie has also served as the <i>Post</i>&rsquo;s <st1:city w:st="on"><st1:place w:st="on">London</st1:place></st1:city> correspondent before becoming National Editor in 1982. In 1984, he was named Managing Editor of the <i>Washington Post</i>, a position he held until 1991, when he was named Executive Editor. Under Downie&rsquo;s leadership, the paper won 25 Pulitzer Prizes including three Pulitzer gold medals for public service.</p>
-<p class="MsoNormal"><o:p></o:p><i>Listen to Downie speak about the </i>Post<i>'s decision, just before the presidential election of 1996, not to publish information about Senator Robert Dole's personal life.</i></p>
-<p><img border="0" class="audiofile" src="../../files/audios/52/Len&#32;Downie&#32;clip.mp3" alt="" /></p></div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/25/knightcase_logo_rogers.JPG') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_25.html" title="Home">
+         <span>
+          Biography: Leonard Downie, Jr.
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_25_id_315.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_303.html">
+          Gays in the Military
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_304.html">
+          Gays and the Media
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_305.html">
+          The Rise of "Outing"
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_306.html">
+          A News Tip
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_307.html">
+          The Arlington Ceremony
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_308.html">
+          At the Inn
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_309.html">
+          What did Rogers want?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_310.html">
+          Who was Alan Rogers?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_311.html">
+          What to Write
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_312.html">
+          Deliberating
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_313.html">
+          On Downie's Desk
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_25_id_100_c_bio.html">Donna&nbsp;St. George</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_25_id_101_c_bio.html">Leonard&nbsp;Downie, Jr.</a></li>
-
-<li class="leaf"><a  href="case_id_25_id_102_c_bio.html">Robert&nbsp;McCartney</a></li>
-
-<li class="leaf"><a  href="case_id_25_id_103_c_bio.html">Deborah&nbsp;Howell</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/25/Army Major Alan Rogers and the Washington Post_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_25.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Leonard Downie, Jr.
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="padding: 10px; float: left;">
+         <img alt="" src="../../files/photos/268/Len Downie.jpg"/>
+        </div>
+        <p class="MsoNormal">
+         Leonard Downie, Jr. was the Executive Editor of the
+         <i>
+          Washington Post
+         </i>
+         . Downie has spent his entire journalistic career at the paper, where he started as a summer intern reporter in 1965. He soon became a prize-winning investigative reporter on the paper’s Metro desk. In 1974, when he was Assistant Managing Editor for Metropolitan News, Downie oversaw the paper’s Watergate coverage. Downie has also served as the
+         <i>
+          Post
+         </i>
+         ’s
+         <st1:city w:st="on">
+          <st1:place w:st="on">
+           London
+          </st1:place>
+         </st1:city>
+         correspondent before becoming National Editor in 1982. In 1984, he was named Managing Editor of the
+         <i>
+          Washington Post
+         </i>
+         , a position he held until 1991, when he was named Executive Editor. Under Downie’s leadership, the paper won 25 Pulitzer Prizes including three Pulitzer gold medals for public service.
+        </p>
+        <p class="MsoNormal">
+         <o:p>
+         </o:p>
+         <i>
+          Listen to Downie speak about the
+         </i>
+         Post
+         <i>
+          's decision, just before the presidential election of 1996, not to publish information about Senator Robert Dole's personal life.
+         </i>
+        </p>
+        <p>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/52/Len Downie clip.mp3"/>-->
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_25_id_100_c_bio.html">
+          Donna St. George
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_25_id_101_c_bio.html">
+          Leonard Downie, Jr.
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_102_c_bio.html">
+          Robert McCartney
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_25_id_103_c_bio.html">
+          Deborah Howell
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
