--- a/casestudies/31/casestudy/www/layout/case_id_31_id_98_c_bio.html
+++ b/casestudies/31/casestudy/www/layout/case_id_31_id_98_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: George Papajohn | Elusive Story (dead)
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: George Papajohn | Elusive Story (dead)
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #330694;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,292 +84,260 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/31/knightcase_logo_chitrib.JPG') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_31.html" title="Home"><span>Biography: George Papajohn</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_31.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_351.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_352.html">No Child Left Behind</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_353.html">School Choice in Chicago</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_354.html">A Beat Reporter Goes Deeper</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_355.html">Going In Blind</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_356.html">First Day, First Twist</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_357.html">Beginnings of a Theme</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_358.html">Behind the Scenes</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_359.html">First Month at Stockton</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_360.html">Obstacles</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_361.html">From Stockton to Attucks</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_362.html">Salvaging a Story</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_363.html">The Projects Team</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_364.html">Third Chapter?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_31_id_365.html">How to tell her?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/31/Chicago&#32;Tribune&#32;Text.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_31.html">Home</a></div>		
-		<h1 class="title">Biography: George&nbsp;Papajohn</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="padding: 10px; float: left;"><img alt="" src="../../files/photos/333/papajohn.jpg" /></div>
-<p>In the spring of 2004, Papajohn was the deputy projects editor at the <i>Chicago Tribune</i>. He started at the paper as a summer intern on the copy desk, in 1982, and remained there ever since. Before joining the Projects Team, he covered suburban news as well as street gang activity as a metro reporter.</p>
-<p>Papajohn has since been named associate managing editor/investigations and consumer watchdog at the <i>Tribune</i>, and in 2007, directed the <i>Tribune</i>&rsquo;s &ldquo;Hidden Hazards&rdquo; project, which won a  Pulitzer Prize for investigative reporting.</p>
-<p>&nbsp;</p>
-<p><i>Listen to Papajohn talk about the rationale behind multi-part stories.</i></p>
-<p><img border="0" class="audiofile" src="../../files/audios/72/Multipart&#32;stories.mp3" alt="" /></p></div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/31/knightcase_logo_chitrib.JPG') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_31.html" title="Home">
+         <span>
+          Biography: George Papajohn
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_31.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_351.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_352.html">
+          No Child Left Behind
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_353.html">
+          School Choice in Chicago
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_354.html">
+          A Beat Reporter Goes Deeper
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_355.html">
+          Going In Blind
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_356.html">
+          First Day, First Twist
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_357.html">
+          Beginnings of a Theme
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_358.html">
+          Behind the Scenes
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_359.html">
+          First Month at Stockton
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_360.html">
+          Obstacles
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_361.html">
+          From Stockton to Attucks
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_362.html">
+          Salvaging a Story
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_363.html">
+          The Projects Team
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_364.html">
+          Third Chapter?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_365.html">
+          How to tell her?
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_31_id_97_c_bio.html">Cornelia&nbsp;Grumman</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_31_id_98_c_bio.html">George&nbsp;Papajohn</a></li>
-
-<li class="leaf"><a  href="case_id_31_id_99_c_bio.html">Stephanie&nbsp;Banchero</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/31/Chicago Tribune Text.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_31.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: George Papajohn
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="padding: 10px; float: left;">
+         <img alt="" src="../../files/photos/333/papajohn.jpg"/>
+        </div>
+        <p>
+         In the spring of 2004, Papajohn was the deputy projects editor at the
+         <i>
+          Chicago Tribune
+         </i>
+         . He started at the paper as a summer intern on the copy desk, in 1982, and remained there ever since. Before joining the Projects Team, he covered suburban news as well as street gang activity as a metro reporter.
+        </p>
+        <p>
+         Papajohn has since been named associate managing editor/investigations and consumer watchdog at the
+         <i>
+          Tribune
+         </i>
+         , and in 2007, directed the
+         <i>
+          Tribune
+         </i>
+         ’s “Hidden Hazards” project, which won a  Pulitzer Prize for investigative reporting.
+        </p>
+        <p>
+        </p>
+        <p>
+         <i>
+          Listen to Papajohn talk about the rationale behind multi-part stories.
+         </i>
+        </p>
+        <p>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/72/Multipart stories.mp3"/>-->
+         <audio controls><source src="../../files/audios/72/Multipart&#32;stories.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_31_id_97_c_bio.html">
+          Cornelia Grumman
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_31_id_98_c_bio.html">
+          George Papajohn
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_31_id_99_c_bio.html">
+          Stephanie Banchero
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
