--- a/casestudies/37/casestudy/www/layout/case_id_37_id_122_c_bio.html
+++ b/casestudies/37/casestudy/www/layout/case_id_37_id_122_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Mary Pitman Kitch | A Matter of Opinion: The Oregonian Editorial Board and Sam Adams 
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Mary Pitman Kitch | A Matter of Opinion: The Oregonian Editorial Board and Sam Adams
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #276b65;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,161 +84,136 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/37/knightcase_logo.JPG') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_37.html" title="Home"><span>Biography: Mary Pitman Kitch</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_37.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_456.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_457.html">The <i>Oregonian</i> editorial board</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_458.html">Oregon politics</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_459.html">Sam Adams</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_460.html">The Election</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_461.html">Another Scoop for <i>Willamette Week</i></a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_462.html">Call to Resign?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/37/Oregonian&#32;Editorial&#32;Board&#32;and&#32;Sam&#32;Adams_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_37.html">Home</a></div>		
-		<h1 class="title">Biography: Mary Pitman&nbsp;Kitch</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="padding: 10px; float: right;"><img alt="" src="../../files/photos/372/mary_kitch.gif" /></div>
-<p>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<meta content="Word.Document" name="ProgId">
-<meta content="Microsoft Word 11" name="Generator">
-<meta content="Microsoft Word 11" name="Originator">
-<link href="file:///C:%5CDOCUME%7E1%5CKGILSI%7E1%5CLOCALS%7E1%5CTemp%5Cmsohtml1%5C01%5Cclip_filelist.xml" rel="File-List" /><!--[if gte mso 9]><xml>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/37/knightcase_logo.JPG') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_37.html" title="Home">
+         <span>
+          Biography: Mary Pitman Kitch
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_37.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_456.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_457.html">
+          The
+          <i>
+           Oregonian
+          </i>
+          editorial board
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_458.html">
+          Oregon politics
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_459.html">
+          Sam Adams
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_460.html">
+          The Election
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_461.html">
+          Another Scoop for
+          <i>
+           Willamette Week
+          </i>
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_462.html">
+          Call to Resign?
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/37/Oregonian Editorial Board and Sam Adams_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_37.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Mary Pitman Kitch
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="padding: 10px; float: right;">
+         <img alt="" src="../../files/photos/372/mary_kitch.gif"/>
+        </div>
+        <p>
+         <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+          <meta content="Word.Document" name="ProgId">
+           <meta content="Microsoft Word 11" name="Generator">
+            <meta content="Microsoft Word 11" name="Originator">
+             <link href="file:///C:%5CDOCUME%7E1%5CKGILSI%7E1%5CLOCALS%7E1%5CTemp%5Cmsohtml1%5C01%5Cclip_filelist.xml" rel="File-List"/>
+             <!--[if gte mso 9]><xml>
  
   Normal
   0
@@ -246,12 +231,15 @@ font-style:italic;
   
   MicrosoftInternetExplorer4
  
-</xml><![endif]--><!--[if gte mso 9]><![endif]--><!--[if !mso]>
+</xml><![endif]-->
+             <!--[if gte mso 9]><![endif]-->
+             <!--[if !mso]>
 <style>
 st1\:*{behavior:url(#ieooui) }
 </style>
-<![endif]--><style type="text/css">
-<!--
+<![endif]-->
+             <style type="text/css">
+              <!--
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{mso-style-parent:"";
@@ -265,7 +253,8 @@ st1\:*{behavior:url(#ieooui) }
 div.Section1
 	{page:Section1;}
 -->
-</style><!--[if gte mso 10]>
+             </style>
+             <!--[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -273,88 +262,140 @@ div.Section1
 	mso-style-parent:"";
 	font-size:10.0pt;"Times New Roman";}
 </style>
-<![endif]--><span>Mary Pitman Kitch was born in Texas and grew up in Kansas</span>. She graduated Phi Beta Kappa from Kansas University with a degree in English literature and then worked in a city planning department and as a neighborhood advocate.             </meta>
-</meta>
-</meta>
-</meta>
-</p>
-<p>She worked for the Fresno<i> Bee </i>before joining the <i>Oregonian</i> in 1994, first as a copy editor and later
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<meta content="Word.Document" name="ProgId">
-<meta content="Microsoft Word 11" name="Generator">
-<meta content="Microsoft Word 11" name="Originator"><span> as an editorial writer, covering local government, land-use planning, gay rights, and immigration. She was both a Casey fellow and a Knight fellow. The <i>Oregonian</i>'s series on the U.S. Immigration and Naturalization Service, which won the Pulitizer Prize for public service in 2001, included one of her editorials. In 2003, she won &quot;best editorial&quot; in Oregon.<p><i>Listen to Kitch describe Portland's unusual city government. </i><br><img border='0' alt='' src='../../files/audios/93/Kitch&#32;on&#32;commission&#32;government.mp3' class='audiofile'></p></span>                </meta>
-</meta>
-</meta>
-</meta>
-</p></div>
+<![endif]-->
+             <span>
+              Mary Pitman Kitch was born in Texas and grew up in Kansas
+             </span>
+             . She graduated Phi Beta Kappa from Kansas University with a degree in English literature and then worked in a city planning department and as a neighborhood advocate.
+            </meta>
+           </meta>
+          </meta>
+         </meta>
+        </p>
+        <p>
+         She worked for the Fresno
+         <i>
+          Bee
+         </i>
+         before joining the
+         <i>
+          Oregonian
+         </i>
+         in 1994, first as a copy editor and later
+         <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+          <meta content="Word.Document" name="ProgId">
+           <meta content="Microsoft Word 11" name="Generator">
+            <meta content="Microsoft Word 11" name="Originator">
+             <span>
+              as an editorial writer, covering local government, land-use planning, gay rights, and immigration. She was both a Casey fellow and a Knight fellow. The
+              <i>
+               Oregonian
+              </i>
+              's series on the U.S. Immigration and Naturalization Service, which won the Pulitizer Prize for public service in 2001, included one of her editorials. In 2003, she won "best editorial" in Oregon.
+              <p>
+               <i>
+                Listen to Kitch describe Portland's unusual city government.
+               </i>
+               <br>
+                <!--<img alt="" border="0" class="audiofile" src="../../files/audios/93/Kitch on commission government.mp3"/>-->
+                <audio controls><source src="../../files/audios/93/Kitch&#32;on&#32;commission&#32;government.mp3" type="audio/mpeg"></audio>
+               </br>
+              </p>
+             </span>
+            </meta>
+           </meta>
+          </meta>
+         </meta>
+        </p>
+       </div>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_37_id_118_c_bio.html">Bob&nbsp;Caldwell</a></li>
-
-<li class="leaf"><a  href="case_id_37_id_119_c_bio.html">Rick&nbsp;Attig</a></li>
-
-<li class="leaf"><a  href="case_id_37_id_120_c_bio.html">Doug&nbsp;Bates</a></li>
-
-<li class="leaf"><a  href="case_id_37_id_121_c_bio.html">Mike&nbsp;Francis</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_37_id_122_c_bio.html">Mary Pitman&nbsp;Kitch</a></li>
-
-<li class="leaf"><a  href="case_id_37_id_123_c_bio.html">Susan&nbsp;Nielsen</a></li>
-
-<li class="leaf"><a  href="case_id_37_id_124_c_bio.html">David&nbsp;Sarasohn</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_37_id_118_c_bio.html">
+          Bob Caldwell
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_119_c_bio.html">
+          Rick Attig
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_120_c_bio.html">
+          Doug Bates
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_121_c_bio.html">
+          Mike Francis
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_37_id_122_c_bio.html">
+          Mary Pitman Kitch
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_123_c_bio.html">
+          Susan Nielsen
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_37_id_124_c_bio.html">
+          David Sarasohn
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
