--- a/casestudies/25/casestudy/www/layout/case_id_25_id_101_c_bio.html
+++ b/casestudies/25/casestudy/www/layout/case_id_25_id_101_c_bio.html
@@ -259,6 +259,7 @@ font-style:italic;
         </p>
         <p>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/52/Len Downie clip.mp3"/>-->
+         <audio controls><source src="../../files/audios/52/Len&#32;Downie&#32;clip.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
