--- a/casestudies/25/casestudy/www/layout/case_id_25_id_103_c_bio.html
+++ b/casestudies/25/casestudy/www/layout/case_id_25_id_103_c_bio.html
@@ -248,6 +248,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/51/Deborah Howell clip.mp3"/>-->
+         <audio controls><source src="../../files/audios/51/Deborah&#32;Howell&#32;clip.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
