--- a/casestudies/30/casestudy/www/layout/case_id_30_id_96_c_bio.html
+++ b/casestudies/30/casestudy/www/layout/case_id_30_id_96_c_bio.html
@@ -319,6 +319,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/60/Lebo bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/60/Lebo&#32;bio.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
         </p>
