--- a/casestudies/29/casestudy/www/layout/case_id_29_id_91_c_bio.html
+++ b/casestudies/29/casestudy/www/layout/case_id_29_id_91_c_bio.html
@@ -254,6 +254,7 @@ font-style:italic;
          </span>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/postdispatch/bio_jonsson.mp3"/>-->
+         <audio controls><source src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/postdispatch/bio_jonsson.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
