--- a/casestudies/14/casestudy/www/layout/case_id_14_id_74_c_bio.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_74_c_bio.html
@@ -314,6 +314,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/49/Robinson bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/49/Robinson&#32;bio.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
