--- a/casestudies/14/casestudy/www/layout/case_id_14_id_76_c_bio.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_76_c_bio.html
@@ -375,6 +375,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/45/Pfeiffer bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/45/Pfeiffer&#32;bio.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
          <span>
