--- a/casestudies/14/casestudy/www/layout/case_id_14_id_77_c_bio.html
+++ b/casestudies/14/casestudy/www/layout/case_id_14_id_77_c_bio.html
@@ -376,6 +376,7 @@ div.Section1
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/41/Baron bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/41/Baron&#32;bio.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
