--- a/casestudies/146/casestudy/www/layout/case_id_146_id_301_c_bio.html
+++ b/casestudies/146/casestudy/www/layout/case_id_146_id_301_c_bio.html
@@ -229,6 +229,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/421/nuwagababio.mp3"/>-->
+         <audio controls><source src="../../files/audios/421/nuwagababio.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
