--- a/casestudies/126/casestudy/www/layout/case_id_126_id_248_c_bio.html
+++ b/casestudies/126/casestudy/www/layout/case_id_126_id_248_c_bio.html
@@ -219,6 +219,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/365/PaulBio.mp3"/>-->
+          <audio controls><source src="../../files/audios/365/PaulBio.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
        </div>
