--- a/casestudies/127/casestudy/www/layout/case_id_127_id_254_c_bio.html
+++ b/casestudies/127/casestudy/www/layout/case_id_127_id_254_c_bio.html
@@ -216,6 +216,7 @@ font-style:italic;
          </i>
          <br/>
          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/373/EimickeAudioCut.mp3"/>-->
+         <audio controls><source src="../../files/audios/373/EimickeAudioCut.mp3" type="audio/mpeg"></audio>
         </p>
        </div>
       </div>
