--- a/casestudies/126/casestudy/www/layout/case_id_126_id_251_c_bio.html
+++ b/casestudies/126/casestudy/www/layout/case_id_126_id_251_c_bio.html
@@ -221,6 +221,7 @@ font-style:italic;
           </i>
           <br/>
           <!--<img alt="" border="0" class="audiofile" src="../../files/audios/363/KenanBio.mp3"/>-->
+          <audio controls><source src="../../files/audios/363/KenanBio.mp3" type="audio/mpeg"></audio>
          </p>
         </blockquote>
        </div>
