--- a/casestudies/21/casestudy/www/layout/case_id_21_id_57_c_bio.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_57_c_bio.html
@@ -265,7 +265,12 @@ font-style:italic;
 <h3>Audio</h3>
 <p><em>Listen to Smith on the Standards and Practices offices at the networks.</em><br />
 <span class="footnoteslength"><strong>Length:</strong> 30 sec</span><br />
-<img border="0" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Smith%20bio%20clip.mp3" alt="" /></p></div>
+<audio controls>
+  <source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Smith%20bio%20clip.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+</audio>
+
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
