--- a/casestudies/21/casestudy/www/layout/case_id_21_id_56_c_bio.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_56_c_bio.html
@@ -265,7 +265,11 @@ font-style:italic;
 <h3>Audio</h3>
 <p><i>Listen to Avram on the importance of the Duke rape story.</i><br />
 <span class="footnoteslength"><strong>Length:</strong> 31 sec</span><br />
-<img border="0" alt="" class="audiofile" src="http://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/Avram%20bio%20clip.mp3" /></p></div>
+<audio controls>
+  <source src="https://ccnmtl.columbia.edu/broadcast/projects/knight_case_studies/abcnews/avram_bio_clip.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+</audio>
+</p></div>
       </div>
 				</div><!-- id="main" -->
 	</div><!-- id="contentbody" -->
